--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <li>Pedro Salazar</li>
                 <li>Analista Programador</li>
                 <li>pedro.salazar23@inacapmail.cl</li>
-                <li>pedrosalazar@github.com</li>
+                <li>PedroSx29</li>
             </ul>
         </div>
     </main>
