--- a/index.html
+++ b/index.html
@@ -87,16 +87,13 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-2 col-lg-2 col-x1-2 mx-auto mt-3 mt-5 mb-5">
-            <h5 class="mb-4 font-weight-bold">CONTACTO</h5>
-            <hr class="mb-4">
-            <ul>
-                <li>Pedro Salazar</li>
-                <li>Analista Programador</li>
-                <li>pedro.salazar23@inacapmail.cl</li>
-                <li>PedroSx29</li>
-            </ul>
-        </div>
     </main>
+    <footer class="bg-dark mt-5 p-5">
+        <div class="text-white">
+            <h2>Pedro Salazar</h2>
+            <h2><a href="https://github.com/PedroSx29/PFE-Clase-4-02-04">Mi Github</a></h2>
+            <h2>pedro.salazar23@inacapmail.cl</h2>
+        </div>
+    </footer>
 </body>
 </html>
